Centros Universitarios en español e inglés.

--- a/amatitlan.en.html
+++ b/amatitlan.en.html
@@ -807,7 +807,7 @@
              <div class="col-12 col-md-6 col-lg-4">
               <nav>
                 <h4>
-                  Cursos Libres  </h4>
+                  Free courses  </h4>
                 <ul class="ps-3">
                  <li><span>
                     <a href="/cursoslibres/ingles">
@@ -819,7 +819,7 @@
             <div class="col-12 col-md-6 col-lg-4">
               <nav>
                 <h4>
-                  Licenciaturas </h4>
+                  Bachelor's Degrees </h4>
                 <ul class="ps-3">
                   <li>
                     <a href="/licenciatura/sistemas">
