--- a/campus-central.en.html
+++ b/campus-central.en.html
@@ -640,7 +640,7 @@
     </header>
 
     <main>
-      <section id="carousel_HomeIndex" class="carousel carousel-banner banner-zoom slide" data-bs-ride="false">
+      <section id="carousel_HomeIndex" class="carousel carousel-banner slide" data-bs-ride="false">
       
         <div class="carousel-inner">
 
@@ -652,7 +652,7 @@
             </div>
           </div>
 
-          <div class="carousel-item active">
+          <div class="carousel-item active banner-zoom">
             <picture>
               <source srcset="img/campus-central/campus-central-1-d.webp" media="(min-width: 1200px)">
               <source srcset="img/campus-central/campus-central-1-m.webp" media="(min-width: 576px)">
@@ -660,7 +660,7 @@
             </picture>
           </div>
 
-          <div class="carousel-item">
+          <div class="carousel-item banner-zoom">
             <picture>
               <source srcset="img/campus-central/campus-central-2-d.webp" media="(min-width: 1200px)">
               <source srcset="img/campus-central/campus-central-2-m.webp" media="(min-width: 576px)">
@@ -668,7 +668,7 @@
             </picture>
           </div>
 
-          <div class="carousel-item">
+          <div class="carousel-item banner-zoom">
             <picture>
               <source srcset="img/campus-central/campus-central-3-d.webp" media="(min-width: 1200px)">
               <source srcset="img/campus-central/campus-central-3-m.webp" media="(min-width: 576px)">
