--- a/chinautla.en.html
+++ b/chinautla.en.html
@@ -618,7 +618,7 @@
             </div>
             <div class="nav z-index flex-row align-items-center">
               <div class="i18n text-light">
-                <a href="index.html" class="text-decoration-none text-light">ESP</a>/<a href="index.en.html" class="text-decoration-none fw-bold text-light">ENG</a>
+                <a href="chinautla.html" class="text-decoration-none text-light">ESP</a>/<a href="chinautla.en.html" class="text-decoration-none fw-bold text-light">ENG</a>
               </div>
               <button onclick="document.location = 'https://umg.edu.gt/miumg/'" class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
                 <img src="img/miumg.svg" alt="miumg">
@@ -717,16 +717,16 @@
           <div class="row">
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
               
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>65</label> Aulas <br>modernas</h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>65</label> Modern <br>classrooms</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Egresados </h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Graduates </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>5</label> Carreras <br>  activas</h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>5</label> Active <br>  careers</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 ">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>57</label> Años al servicio<br> de la Educación</h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>57</label> Years of service<br> to education</h2>
             </div>
           </div>
 
