--- a/header-footer.html
+++ b/header-footer.html
@@ -1,4 +1,6 @@
-<header>
+
+
+ <header>
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="/index.en.html" class="navbar-brand m-0 p-0">
@@ -617,11 +619,10 @@
           </div>
         </div>
       </nav>
-    </header>
+ </header>
 
 
-
-    <footer class="position-relative overflow-x-hidden pt-5 pb-4 pt-sm-6 pt-md-7 pt-lg-8">
+ <footer class="position-relative overflow-x-hidden pt-5 pb-4 pt-sm-6 pt-md-7 pt-lg-8">
       <div class="container g-lg-0">
         <div class="row">
           <div class="col-12 col-sm-6 col-xl-3">
@@ -872,4 +873,56 @@
           </div>
         </div>
       </div>
-    </footer>
+ </footer>
+
+
+ <div id="versiculo" class="w-100 position-absolute">
+      <div class="container-fluid container-xl">
+        <div class="col-8 offset-2 col-lg-6 offset-lg-1">
+          <figure class="d-none d-lg-inline-block px-2">
+            <label class="fs-5 fs-md-4">
+              Verse of the Day
+            </label>
+            <blockquote class="blockquote fs-6 fs-md-5 lh-sm">
+              “For Christ also suffered once for sins, the righteous for the unrighteous, to bring you to God. He was put to death in the body but made alive in the Spirit.”
+            </blockquote>
+            <figcaption class="blockquote-footer fs-6 fs-md-5 lh-sm">
+              <cite class="fst-normal">1 Peter 3:18</cite> | NVI Powered by BibleGateway.com
+            </figcaption>
+          </figure>
+          <a href="#" class="btn btn-light d-lg-none px-4">
+            Verse of the Day
+          </a>
+        </div>
+      </div>
+ </div>
+
+
+ <h1>Amatitlán<label>University Center</label></h1>
+
+
+
+ Modern <br>classrooms
+ Graduates
+ Active<br> careers
+ Years of service<br> to education
+
+
+Contact and opening hours
+Office hours:
+Monday to Friday from
+hours.
+Saturday from
+Sunday from
+
+
+List of careers
+Free courses
+Teacher Training Programs
+Bachelor's Degrees
+Master's Degrees
+
+
+Find your university career
+Select a faculty
+Select a career
