--- a/malacatan.html
+++ b/malacatan.html
@@ -618,7 +618,7 @@
           </div>
           <div class="nav z-index flex-row align-items-center">
             <div class="i18n text-light">
-              <a href="index.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="index.en.html" class="text-decoration-none text-light">ENG</a>
+              <a href="malacatan.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="malacatan.en.html" class="text-decoration-none text-light">ENG</a>
             </div>
             <button onclick="document.location = 'https://umg.edu.gt/miumg/'" class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
               <img src="img/miumg.svg" alt="miumg">
@@ -648,7 +648,7 @@
           <div class="container h-100">
             <div class="row h-100 align-items-center">
               <div class="col-12 ">
-                <h1>Centro Universitario<label> Malacatán </label></h1>
+                <h1>Centro Universitario<label> Malacatán, San Marcos </label></h1>
               </div>
             </div>
           </div>
@@ -721,7 +721,7 @@
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>23</label> Aulas <br>modernas</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Egresados </h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Egresados </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>08</label> Carreras <br>  activas</h2>
