--- a/san-marcos.html
+++ b/san-marcos.html
@@ -618,7 +618,7 @@
           </div>
           <div class="nav z-index flex-row align-items-center">
             <div class="i18n text-light">
-              <a href="index.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="index.en.html" class="text-decoration-none text-light">ENG</a>
+              <a href="san-marcos.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="san-marcos.en.html" class="text-decoration-none text-light">ENG</a>
             </div>
             <button onclick="document.location = 'https://umg.edu.gt/miumg/'" class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
               <img src="img/miumg.svg" alt="miumg">
@@ -647,7 +647,7 @@
           <div class="container h-100">
             <div class="row h-100 align-items-center">
               <div class="col-12 ">
-                <h1>Centro Universitario<label> San Marcos </label></h1>
+                <h1>Centro Universitario<label> San Pedro Sacatepéquez, San Marcos </label></h1>
               </div>
             </div>
           </div>
@@ -720,13 +720,13 @@
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>**</label> Aulas <br>modernas</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Egresados </h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Egresados </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>05</label> Carreras <br>  activas</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 ">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>57</label> Años al servicio<br> de la Educación</h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>57</label> Años al servicio<br> de la educación</h2>
             </div>
           </div>
 
@@ -784,8 +784,8 @@
 
 
           <div class="row mt-3 mt-sm-4 mt-lg-5">
-           <div class="col-12 col-md-6 col-lg-4">
-              <!--nav>
+           <!-- div class="col-12 col-md-6 col-lg-4">
+              <nav>
                 <h4>
                   Tecnicos Universitarios </h4>
                 <ul class="ps-3">
@@ -794,8 +794,8 @@
                       Cursos Libres de Inglés<samp></samp> </a></span>
                   </li>
                 </ul>
-              </nav-->
-            </div>
+              </nav>
+            </div -->
             <div class="col-12 col-md-6 col-lg-4">
               <nav>
                 <h4>
@@ -824,8 +824,8 @@
                 </ul>
               </nav>
             </div>
-           <div class="col-12 col-md-6 col-lg-4">
-              <!--nav>
+           <!--div class="col-12 col-md-6 col-lg-4">
+              <nav>
                 <h4>
                   Maestr&iacute;as  </h4>
                 <ul class="ps-3">
@@ -835,8 +835,8 @@
                   </li>
 
                 </ul>
-              </nav-->
-            </div>
+              </nav>
+            </div-->
           </div>
         </div>
       </section>
@@ -867,7 +867,7 @@
                 <!-- listado de carreras  -->        
               </select>
       
-              <input id="CentroUniversitario" value="san-marcos" type="hidden">
+              <input id="CentroUniversitario" value="sanpedrosacatepequez" type="hidden">
             </div>
           </div>
         </div>
