--- a/huehuetenango.html
+++ b/huehuetenango.html
@@ -641,7 +641,7 @@
 
     <main>
 
-      <section id="carousel_HomeIndex" class="carousel carousel-banner banner-zoom slide" data-bs-ride="false">
+      <section id="carousel_HomeIndex" class="carousel carousel-banner slide" data-bs-ride="false">
       
         <div class="carousel-inner">
 
@@ -653,7 +653,7 @@
             </div>
           </div>
 
-          <div class="carousel-item active">
+          <div class="carousel-item active banner-zoom">
             <picture>
               <source srcset="img/huehuetenango/huehuetenango-campus-1-d.webp" media="(min-width: 1200px)">
               <source srcset="img/huehuetenango/huehuetenango-campus-1-m.webp" media="(min-width: 576px)">
@@ -661,7 +661,7 @@
             </picture>
           </div>
 
-          <div class="carousel-item">
+          <div class="carousel-item banner-zoom">
             <picture>
               <source srcset="img/huehuetenango/huehuetenango-campus-2-d.webp" media="(min-width: 1200px)">
               <source srcset="img/huehuetenango/huehuetenango-campus-2-m.webp" media="(min-width: 576px)">
@@ -669,7 +669,7 @@
             </picture>
           </div>
 
-          <div class="carousel-item">
+          <div class="carousel-item banner-zoom">
             <picture>
               <source srcset="img/huehuetenango/huehuetenango-campus-3-d.webp" media="(min-width: 1200px)">
               <source srcset="img/huehuetenango/huehuetenango-campus-3-m.webp" media="(min-width: 576px)">
@@ -677,7 +677,7 @@
             </picture>
           </div>
 
-          <div class="carousel-item">
+          <div class="carousel-item banner-zoom">
             <picture>
               <source srcset="img/huehuetenango/huehuetenango-campus-4-d.webp" media="(min-width: 1200px)">
               <source srcset="img/huehuetenango/huehuetenango-campus-4-m.webp" media="(min-width: 576px)">
