--- a/laboratorios.html
+++ b/laboratorios.html
@@ -939,7 +939,7 @@
     </section>
 
 
-    <section>
+  <!--  <section>
 
         <div class="container mt-5">
             <div class="row">
@@ -971,7 +971,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 </div>
                             </div>
-                            <!-- Agrega más imágenes y títulos aquí -->
+                             Agrega más imágenes y títulos aquí 
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample4" data-bs-slide="prev">
@@ -995,17 +995,15 @@
                         <button type="button" data-bs-target="#carouselExample4" data-bs-slide-to="3" class="miniatura-btn">
                             <img src="img/laboratorios/odontologia/4.webp" class="img-thumbnail" alt="Miniatura 2">
                         </button>
-                        <!-- Agrega más miniaturas aquí -->
+                         Agrega más miniaturas aquí 
                     </div>
                 </div>
             </div>
         </div>
+    </section> -->
 
 
-    </section>
-
-
-    <section>
+    <!-- <section>
 
         <div class="container mt-5">
             <div class="row">
@@ -1037,8 +1035,9 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 </div>
                             </div>
-                            <!-- Agrega más imágenes y títulos aquí -->
+                             Agrega más imágenes y títulos aquí -
                         </div>
+
                         <div class="d-flex justify-content-between align-items-center">
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample5" data-bs-slide="prev">
                                 <span class="carousel-control-icon carousel-control-prev-icon" aria-hidden="true"></span>
@@ -1061,14 +1060,14 @@
                         <button type="button" data-bs-target="#carouselExample5" data-bs-slide-to="3" class="miniatura-btn">
                             <img src="img/laboratorios/ccomunicacion/4.webp" class="img-thumbnail" alt="Miniatura 2">
                         </button>
-                        <!-- Agrega más miniaturas aquí -->
+                         Agrega más miniaturas aquí 
                     </div>
                 </div>
             </div>
         </div>
 
 
-    </section>
+    </section> -->
 
 
     <section style="margin-top: 90px; margin-bottom: 90px;">
